feat: finish liquid plugin

--- a/src/pages/index.liquid
+++ b/src/pages/index.liquid
@@ -3,6 +3,7 @@
 {% block %}
 <div id="app">
     <div>
+        {{ global }}
         <a href="https://vitejs.dev" target="_blank">
             <img src="/vite.svg" class="logo" alt="Vite logo" />
         </a>
