--- a/src/main.css
+++ b/src/main.css
@@ -1,12 +1,17 @@
 @import './styles/root.css';
 
+:root {
+  --blue: #646cff;
+  --blue-dark: #646cff;
+}
+
 a {
   font-weight: 500;
-  color: #646cff;
+  color: var(--blue);
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: var(--blue-dark);
 }
 
 body {
