--- a/src/layouts/Layout.liquid
+++ b/src/layouts/Layout.liquid
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/src/main.css">
 </head>
 <body>
+ads
 {% block %}{% endblock %}
 <script type="module" src="/src/main.js"></script>
 </body>
